--- a/week2/views/form.hbs
+++ b/week2/views/form.hbs
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!--go to /about on submission using the post method.
     <form action="/about" method="post">
         <input type="text" name="message"/>
         <button type="submit">submit</button>
