--- a/week2/views/index.hbs
+++ b/week2/views/index.hbs
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!--Uses partial head.hbs-->
     {{> head}}
 <body>
     <h1>
         Welcome to my Home Page!
     </h1>
+    <!--Uses partial nav.hbs-->
     {{> nav}}
     <p>
+        <!--Uses partial words.hbs-->
         {{> words}}
     </p>
+   
 </body>
 </html>
